# FLM_Map

./: .gitignore  filterJSON.js  index.html  main.js  map.js  panel.js  renderCanvas.js  setup.js  style.css
scripts/: to_timemap.py
to_timemap/: .gitignore  README.md  lkmac_test.sh  pyproject.toml
to_timemap/convert_timemap/: 00_core.ipynb  01_statistics.ipynb  index.ipynb  settings.ini
to_timemap/convert_timemap/convert_timemap/: _nbdev.py  core.py  statistics.py
to_timemap/nbs/: LK_2020.06.17.ipynb
to_timemap/tests/: test_to_timemap.py
