[tool.poetry]
name = "to_timemap"
version = "0.1.0"
description = ""
authors = ["Lachlan Kermode <lachiekermode@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
notebook = "^6.0"
fastscript = "^0.1.4"
xlsxwriter = "^1.2"
nbdev = "^0.2.18"
pandas = "^1.0"
xlrd = "^1.2"
seaborn = "^0.10.1"
matplotlib = "^3.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
